Remove hash-based redirects to support BrowserRouter

--- a/public/account/index.html
+++ b/public/account/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0;url=/#/account">
+  <meta http-equiv="refresh" content="0;url=/account">
   <title>Redirecting to Account...</title>
   <script>
-    window.location.href = '/#/account';
+    window.location.href = '/account';
   </script>
 </head>
 <body>
