--- a/public/account.html
+++ b/public/account.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0;url=/">
+  <meta http-equiv="refresh" content="0;url=/account">
   <title>Redirecting...</title>
   <script>
-    // Redirect to the home page and then navigate to /account
-    window.location.href = '/#/account';
+    // Redirect to the account page without hash
+    window.location.href = '/account';
   </script>
 </head>
 <body>
